# investment-trading-dash

./: .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  dashboard.html  package-lock.json  package.json  start-trend-desk.bat  vite.config.js
engine/: README.md  pyproject.toml
engine/config/: assets.yaml  research.yaml  risk.yaml
engine/data/: README.md
engine/registry/: costs.jsonl  experiments.jsonl
engine/registry/manifests/: baseline-20260722T174148472128Z.json  baseline-20260722T174329537652Z.json  baseline-20260722T174923455203Z.json  baseline-20260722T181616288926Z.json  diagnostics-20260722T232833468850Z.json  replay-20260722T184026437516Z.json  replay-20260722T184823773308Z.json  replay-20260722T224334097035Z.json  replay-20260722T225944548843Z.json  replay-20260722T232920018376Z.json  run-weekly-2026-07-22.json  trend-30w-ls-20260722T184048295940Z.json  trend-30w-ls-20260722T184353839589Z.json  trend-30w-ls-20260722T184623682159Z.json
engine/registry/replay-actions/: replay-20260722T232920018376Z.jsonl
engine/registry/strategies/: trend-30w-ls-v1.yaml  trend-30w-v1.yaml
engine/tests/: conftest.py  test_backtest.py  test_cli_e2e.py  test_config.py  test_diagnostics.py  test_heat.py  test_long_short.py  test_parity.py  test_registry.py  test_replay.py  test_reporting.py  test_sizing.py  test_status.py  test_tiingo.py  test_validation.py  test_walkforward.py  test_weekly.py
engine/trendlab/: __init__.py  cli.py  config.py  models.py  parity.py  registry.py  replay.py  status.py
engine/trendlab/backtest/: __init__.py  core.py  diagnostics.py  (+1 more)
(+92 files in other folders)
